added servlet (params) calculator hw

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@ Servlets/HW_Servlet_Image/build/
 Servlets/HW_Servlet_Image/dist/
 Servlets/HW_Servlet_Image/nbproject/
 Servlets/HW_Servlet_Image/build.xml
+
+#HW_Servlet_Calculator
+Servlets/HW_Servlet_Calculator/build/
+Servlets/HW_Servlet_Calculator/dist/
+Servlets/HW_Servlet_Calculator/nbproject/
+Servlets/HW_Servlet_Calculator/build.xml
