http error codes hw added

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ Servlets/HW_Servlet_Calculator/build/
 Servlets/HW_Servlet_Calculator/dist/
 Servlets/HW_Servlet_Calculator/nbproject/
 Servlets/HW_Servlet_Calculator/build.xml
+
+#HW_Servlet_HTTP_codes
+Servlets/HW_Servlet_HTTP_codes/build/
+Servlets/HW_Servlet_HTTP_codes/dist/
+Servlets/HW_Servlet_HTTP_codes/nbproject/
+Servlets/HW_Servlet_HTTP_codes/build.xml
